# internal/handler/bar.go
@@ -24,7 +24,7 @@ func NewBarHandler(handler *Handler, barService service.BarService) *BarHandler 
 //	@Summary	时间线
 //	@Schemes
 //	@Description
-//	@Tags		指标
+//	@Tags		公共
 //	@Accept		json
 //	@Produce	json
 //	@Security	Bearer
@@ -38,4 +38,25 @@ func (h *BarHandler) ListBar(ctx *gin.Context) {
 	}
 
 	v1.HandleSuccess(ctx, bars)
+}
+
+// ListCoin godoc
+//
+//	@Summary	币币信息
+//	@Schemes
+//	@Description
+//	@Tags		公共
+//	@Accept		json
+//	@Produce	json
+//	@Security	Bearer
+//	@Success	200	{object}	model.Bar
+//	@Router		/coin/list [get]
+func (h *BarHandler) ListCoin(ctx *gin.Context) {
+	coins, err := h.barService.ListCoin(ctx)
+	if err != nil {
+		v1.HandleError(ctx, http.StatusInternalServerError, v1.ErrServer, nil)
+		return
+	}
+
+	v1.HandleSuccess(ctx, coins)
 }
